# Robocup_Avances

./: .gitignore  README.md
face_recognition/: Abrir_Pose_Recognition  Abrir_face_Recognition  face_recognition.py  face_recognition2.py
install/: local_setup.sh  setup.sh
install/face_recognition/lib/face_recognition/: face_recognition
install/face_recognition/share/face_recognition/: package.sh
install/node_object_detection/lib/node_object_detection/: detector
install/node_object_detection/share/node_object_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/node_path_planning/lib/node_path_planning/: planner
install/node_path_planning/share/node_path_planning/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/node_pose_simulation/lib/node_pose_simulation/: simulator
install/node_pose_simulation/share/node_pose_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/face_recognition/: package.xml  setup.py
src/face_recognition/face_recognition/: face_recognition_node.py
src/face_recognition/launch/: face_recognition.launch.py
src/node_object_detection/: setup.cfg  setup.py
src/node_path_planning/: package.xml  setup.cfg  setup.py
src/node_path_planning/node_path_planning/: planner.py
src/node_pose_simulation/: setup.cfg  setup.py
src/robocup_pose_estimation/: package.xml  setup.cfg  setup.py
src/robocup_pose_estimation/launch/: camera.launch.py
src/robocup_pose_estimation/robocup_pose_estimation/: pose_node.py
(+8 files in other folders)
